--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/RudoCris/device_detector#readme",
   "dependencies": {
-    "fft": "^0.2.1"
+    "fft": "^0.2.1",
+    "node-svm": "^2.1.6"
   }
 }
